[package]
name = "swan-updown"
version = "0.2.9-dev"
edition = "2021"
authors = ["Zhang Zongyu <zongyu@novazy.net>"]
license = "MIT"
repository = "https://github.com/6-6-6/swan-updown"
homepage = "https://github.com/6-6-6/swan-updown"
description = "swan-updown helps create ipsec interfaces"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.14.0"
netlink-packet-route = "0.18.1"
futures = "0.3.29"
tokio = { version = "1.35.0", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
nix = { version = "0.27.1", default-features = false, features = ["sched"]}
clap = { version = "4.4.11", features = ["derive"] }
hex = { version = "0.4.3" }
syslog = "6.1.0"
env_logger = { version = "0.10.1", default-features = false }
log = { version = "0.4.20", features = ["release_max_level_debug"] }

[profile.release]
strip = true
lto = true
panic = "abort"
